syntax = "proto3";

message ObjectDataProto{
    string object = 1;
    int32 count = 2;
    float time = 3;
}